src/components/dHeroAddComment/VideoHeroAddComment.scss
@import '../../styles/partials/mixins';
@import '../../styles/partials/variables';

.add-comment {
    padding: 1rem;

    @include tablet {
        padding: 1.5rem;
        }
    }

.comment-form {
    display: flex;
    flex-direction: column;
    align-items: left;
    margin: auto;
    
    @include tablet {
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        }

    &__labelAndText {


        @include tablet {
        flex-direction: column;
        flex-grow: 1;
        }
    }

    &__label {
        font-size: $label-font-size-M;
        line-height: $label-line-height-M;
        color: $label-font-color;
    
        @include tablet {
            font-size: $label-font-size-DT;
            line-height: $label-line-height-DT;
            }
        }

    &__textarea {
        font-size: $body-font-size-M;
        padding: $form-field-padding-M;
        min-height: $form-field-MIN-height-M;
        width: 94%;
        color: $prim-col-Black;
        border: $form-field-border;
        border-radius: $form-field-radius;
        resize: none;

        @include tablet {
            font-size: $body-font-size-DT;
            width: 90%;
            padding-left: $form-field-padding-DT;
            min-height: 2rem;
            height: 2rem;
        }

        &::placeholder {
            color: $prim-col-Black;
            padding-left: .5rem;
        }

        &::active {
            border:$form-field-border-active;
        }
    }


    &__button {
        background-color: $button-background;
        border-radius: $button-radius;
        color: $button-font-color;
        font-size: $button-font-size-M;
        font-weight: $button-font-weight;
        height: $button-height;
        width: $button-width-M;
        text-align: center;
        background-image: url(../../assets/Icons/add_comment.svg);
        background-repeat: no-repeat;
        background-position: 5% 50%;
        border: none;

        @include tablet {
            width: 30%;
            margin-top: $form-field-padding-M;
        }


        &:hover {
            color: $button-background-hover;
        }
    }
}

